--- a/app/src/main/res/layout/bottomsheet_episode.xml
+++ b/app/src/main/res/layout/bottomsheet_episode.xml
@@ -72,7 +72,7 @@
                 app:layout_constraintTop_toBottomOf="@+id/sbTimeBar" />
 
             <TextView
-                android:id="@+id/tvDate"
+                android:id="@+id/tvDescription"
                 android:layout_width="375dp"
                 android:layout_height="33dp"
                 android:layout_marginTop="4dp"
@@ -94,7 +94,7 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.498"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tvDate"
+                app:layout_constraintTop_toBottomOf="@+id/tvDescription"
                 app:srcCompat="@drawable/baseline_pause_40" />
 
             <ImageButton
