--- a/app/src/main/res/layout/fragment_nghe_ngay.xml
+++ b/app/src/main/res/layout/fragment_nghe_ngay.xml
@@ -199,15 +199,17 @@
                         app:layout_constraintTop_toBottomOf="@+id/tvAverage" />
 
 <!--                    5 star-->
+<!--                    android:indeterminateTint="@color/light_gray"-->
+<!--                    android:indeterminateTintMode="src_atop"-->
                     <ProgressBar
                         android:id="@+id/pb5start"
+                        style="?android:attr/progressBarStyleHorizontal"
                         android:layout_width="150dp"
                         android:layout_height="12dp"
-                        android:indeterminate = "true"
+                        android:indeterminate="false"
                         android:max="100"
-                        style="?android:attr/progressBarStyleHorizontal"
-                        android:indeterminateTint="@color/light_gray"
-                        android:indeterminateTintMode="src_atop"
+                        android:progressBackgroundTint="#858383"
+                        android:progressTint="@color/light_gray"
                         app:layout_constraintEnd_toEndOf="@+id/tvAllReview"
                         app:layout_constraintTop_toTopOf="@+id/tvAverage" />
                     <ImageView
@@ -258,9 +260,10 @@
                         style="?android:attr/progressBarStyleHorizontal"
                         android:layout_width="150dp"
                         android:layout_height="12dp"
-                        android:indeterminate="true"
-                        android:indeterminateTint="@color/light_gray"
-                        android:indeterminateTintMode="src_atop"
+                        android:indeterminate="false"
+                        android:max="100"
+                        android:progressBackgroundTint="#858383"
+                        android:progressTint="@color/light_gray"
                         app:layout_constraintEnd_toEndOf="@+id/pb5start"
                         app:layout_constraintTop_toBottomOf="@+id/pb5start" />
                     <ImageView
@@ -303,9 +306,10 @@
                         style="?android:attr/progressBarStyleHorizontal"
                         android:layout_width="150dp"
                         android:layout_height="12dp"
-                        android:indeterminate="true"
-                        android:indeterminateTint="@color/light_gray"
-                        android:indeterminateTintMode="src_atop"
+                        android:indeterminate="false"
+                        android:max="100"
+                        android:progressBackgroundTint="#858383"
+                        android:progressTint="@color/light_gray"
                         app:layout_constraintEnd_toEndOf="@+id/pb4start"
                         app:layout_constraintTop_toBottomOf="@+id/pb4start" />
                     <ImageView
@@ -340,9 +344,10 @@
                         style="?android:attr/progressBarStyleHorizontal"
                         android:layout_width="150dp"
                         android:layout_height="12dp"
-                        android:indeterminate="true"
-                        android:indeterminateTint="@color/light_gray"
-                        android:indeterminateTintMode="src_atop"
+                        android:indeterminate="false"
+                        android:max="100"
+                        android:progressBackgroundTint="#858383"
+                        android:progressTint="@color/light_gray"
                         app:layout_constraintEnd_toEndOf="@+id/pb3start"
                         app:layout_constraintTop_toBottomOf="@+id/pb3start" />
                     <ImageView
@@ -369,9 +374,10 @@
                         style="?android:attr/progressBarStyleHorizontal"
                         android:layout_width="150dp"
                         android:layout_height="12dp"
-                        android:indeterminate="true"
-                        android:indeterminateTint="@color/light_gray"
-                        android:indeterminateTintMode="src_atop"
+                        android:indeterminate="false"
+                        android:max="100"
+                        android:progressBackgroundTint="#858383"
+                        android:progressTint="@color/light_gray"
                         app:layout_constraintEnd_toEndOf="@+id/pb2start"
                         app:layout_constraintTop_toBottomOf="@+id/pb2start" />
                     <ImageView
