update sub, unsub, show list sub in library

--- a/app/src/main/res/layout/fragment_followed.xml
+++ b/app/src/main/res/layout/fragment_followed.xml
@@ -71,4 +71,10 @@
         android:layout_height="1dp"
         android:background="#e9e8e9" />
 
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/rvListSubcribed"
+        android:layout_margin="12dp"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
+
 </LinearLayout>
