--- a/app/src/main/res/layout/admin_item_danh_muc.xml
+++ b/app/src/main/res/layout/admin_item_danh_muc.xml
@@ -1,8 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
-
-<LinearLayout
+<androidx.cardview.widget.CardView
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:cardElevation="4dp"
+    app:cardUseCompatPadding="true">
+<LinearLayout
     android:layout_width="match_parent"
     android:layout_height="60dp"
     android:orientation="horizontal"
@@ -11,23 +15,22 @@
 
     <TextView
         android:id="@+id/adminCateNameTV"
-        android:layout_width="241dp"
+        android:layout_width="wrap_content"
         android:layout_height="match_parent"
         android:layout_weight="1"
         android:padding="10dp"
         android:text="TextView"
-        android:textSize="24dp"
         android:textColor="@color/black"
-       />
+        android:textSize="24dp" />
 
     <TextView
         android:id="@+id/cateEdit"
         android:layout_width="80dp"
         android:layout_height="47dp"
-        android:layout_weight="1"
         android:drawableLeft="@drawable/ic_baseline_edit_24"
         android:text="Sửa"
-        android:textSize="24dp"
+        android:textSize="20dp"
+        android:paddingTop="10dp"
         android:textColor="@color/black"
         />
 
@@ -35,10 +38,11 @@
         android:id="@+id/cateDelete"
         android:layout_width="wrap_content"
         android:layout_height="45dp"
-        android:layout_weight="1"
         android:drawableLeft="@drawable/ic_baseline_delete_24"
         android:text="Xóa"
-        android:textSize="24dp"
+        android:textSize="20dp"
+        android:paddingTop="10dp"
         android:textColor="@color/black"
         />
 </LinearLayout>
+</androidx.cardview.widget.CardView>
