--- a/app/src/main/res/layout/fragment_admin_cate_manage.xml
+++ b/app/src/main/res/layout/fragment_admin_cate_manage.xml
@@ -19,7 +19,7 @@ android:orientation="vertical">
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/adminListCateRV"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 
     <Button
