--- a/app/src/main/res/layout/fragment_ranking_table.xml
+++ b/app/src/main/res/layout/fragment_ranking_table.xml
@@ -4,181 +4,163 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    tools:context=".NgheNgay.ListTapFragment"
+    tools:context=".ListTapFragment"
     android:orientation="vertical"
     android:background="#e9e8e9">
 
 
-    <ScrollView
+
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="wrap_content"
+        android:orientation="vertical" >
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:orientation="vertical" >
+            android:orientation="horizontal"
+            android:padding="5dp">
+
+            <ImageView
+                android:id="@+id/imgBack"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:src="@drawable/baseline_arrow_back_ios_24" />
+
+            <TextView
+                android:id="@+id/txtTenKenh"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="5dp"
+                android:text="Quay lại "
+                android:textColor="#7a31d6"
+                android:textSize="17dp" />
+
+
+            <TextView
+                android:id="@+id/txtShowList"
+                android:layout_width="180dp"
+                android:layout_height="wrap_content"
+                android:layout_marginLeft="110dp"
+                android:text="Tất cả danh mục "
+                android:textAlignment="textEnd"
+                android:textColor="#7a31d6"
+                android:textSize="17dp" />
+
+
+            />
+
+
+        </LinearLayout>
+
+        <TextView
+            android:id="@+id/txtRankingTable"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:layout_margin="10dp"
+            android:text="TOP BẢNG XẾP HẠNG "
+            android:textColor="@color/black"
+            android:textSize="30dp"
+            android:textStyle="bold" />
+
+
+
+        <FrameLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="10dp">
 
             <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:orientation="horizontal"
-                android:padding="5dp">
-
-                <ImageView
-                    android:id="@+id/imgBack"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@drawable/baseline_arrow_back_ios_24" />
-
-                <TextView
-                    android:id="@+id/txtTenKenh"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_marginLeft="5dp"
-                    android:text="Quay lại "
-                    android:textColor="#7a31d6"
-                    android:textSize="17dp" />
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="10dp"
+                android:orientation="horizontal">
 
 
                 <TextView
-                    android:id="@+id/txtShowList"
-                    android:layout_width="180dp"
+                    android:id="@+id/txtRankingChanel"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Top chương trình"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txtSeeAll"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_marginLeft="110dp"
-                    android:text="Tất cả danh mục "
+                    android:layout_weight="1"
+                    android:text="Xem tất cả "
                     android:textAlignment="textEnd"
                     android:textColor="#7a31d6"
-                    android:textSize="17dp" />
+                    android:textSize="20dp"
+
+                    />
+            </LinearLayout>
+
+            <androidx.viewpager2.widget.ViewPager2
+                android:id="@+id/viewPager"
+                android:layout_width="wrap_content"
+
+                android:layout_height="250dp"
+                android:layout_gravity="center"
+                android:layout_marginStart="5dp"
+                android:layout_marginTop="8dp" />
+
+        </FrameLayout>
 
 
-                />
+        <FrameLayout
+            android:layout_width="wrap_content"
+            android:layout_height="311dp"
+            android:layout_margin="10dp">
 
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="horizontal">
+
+                <TextView
+                    android:id="@+id/txtRankingEsposide"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_weight="1"
+                    android:text="Top tập"
+                    android:textColor="@color/black"
+                    android:textSize="20dp"
+                    android:textStyle="bold" />
+
+                <TextView
+                    android:id="@+id/txtSeeAll2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginLeft="110dp"
+                    android:layout_weight="1"
+                    android:text="Xem tất cả "
+                    android:textAlignment="textEnd"
+                    android:textColor="#7a31d6"
+                    android:textSize="17dp"
+
+                    />
 
             </LinearLayout>
 
-            <TextView
-                android:id="@+id/txtRankingTable"
+            <ListView
+                android:id="@+id/lvRankingTap"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp"
-                android:text="TOP BẢNG XẾP HẠNG "
-                android:textColor="@color/black"
-                android:textSize="30dp"
-                android:textStyle="bold" />
+                android:layout_height="252dp"
+                android:layout_marginTop="50dp"
 
-            <View
-                android:id="@+id/view"
-                android:layout_width="0dp"
-                android:layout_height="0.5dp"
-                android:layout_marginTop="15dp"
-                android:background="#929292"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
+                />
 
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp">
+        </FrameLayout>
 
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
+    </LinearLayout>
 
-
-                    <TextView
-                        android:id="@+id/txtRankingChanel"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Top chương trình"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/txtSeeAll"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="110dp"
-                        android:layout_weight="1"
-                        android:text="Xem tất cả "
-                        android:textAlignment="textEnd"
-                        android:textColor="#7a31d6"
-                        android:textSize="17dp"
-
-                        />
-                </LinearLayout>
-
-                <androidx.viewpager2.widget.ViewPager2
-                    android:id="@+id/viewPager"
-                    android:layout_width="wrap_content"
-                    android:layout_height="290dp"
-                    android:layout_gravity="center"
-                    android:layout_marginStart="5dp"
-                    android:layout_marginTop="8dp" />
-
-            </FrameLayout>
-            <View
-                android:id="@+id/view2"
-                android:layout_width="0dp"
-                android:layout_height="0.5dp"
-                android:layout_marginTop="15dp"
-                android:background="#929292"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintHorizontal_bias="0.0"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/textView" />
-
-            <FrameLayout
-                android:layout_width="match_parent"
-                android:layout_height="match_parent"
-                android:layout_margin="10dp">
-
-                <LinearLayout
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:orientation="horizontal">
-
-                    <TextView
-                        android:id="@+id/txtRankingEsposide"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text="Top tập"
-                        android:textColor="@color/black"
-                        android:textSize="20dp"
-                        android:textStyle="bold" />
-
-                    <TextView
-                        android:id="@+id/txtSeeAll2"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginLeft="110dp"
-                        android:layout_weight="1"
-                        android:text="Xem tất cả "
-                        android:textAlignment="textEnd"
-                        android:textColor="#7a31d6"
-                        android:textSize="17dp"
-
-                        />
-
-                </LinearLayout>
-
-                <ListView
-                    android:id="@+id/lvRankingTap"
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent"
-                    android:layout_marginTop="50dp"
-
-                    android:layout_weight="1" />
-
-            </FrameLayout>
-
-        </LinearLayout>
-    </ScrollView>
 
 
 </LinearLayout>
