--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -18,21 +18,20 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
+    <EditText
 
-    <AutoCompleteTextView
-        android:id="@+id/search_view"
-        android:layout_width="397dp"
-        android:layout_height="39dp"
+        android:id="@+id/searchEditText"
+        android:layout_width="0dp"
+        android:layout_weight="1"
+        android:layout_height="wrap_content"
         android:layout_marginStart="10dp"
         android:layout_marginTop="20dp"
         android:layout_marginEnd="10dp"
-        android:background="@drawable/search_view_background"
-        android:completionThreshold="1"
         android:drawableLeft="@drawable/ic_search"
         android:hint="Search"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/textView9" />
+        app:layout_constraintTop_toBottomOf="@+id/textView9"/>
 
     <View
         android:id="@+id/view3"
@@ -41,7 +40,7 @@
         android:layout_marginTop="20dp"
         android:background="#C8C6C6"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/search_view" />
+        app:layout_constraintTop_toBottomOf="@+id/searchEditText" />
 
     <TextView
         android:id="@+id/textView8"
