phần admin ( chưa test xong mà buồn ngủ quá :< )

--- a/app/src/main/res/layout/fragment_google_sign_in.xml
+++ b/app/src/main/res/layout/fragment_google_sign_in.xml
@@ -6,7 +6,7 @@
     android:orientation="vertical">
 
     <Button
-        android:id="@+id/btnGoogleSignIn"
+        android:id="@+id/btnGoogleSignInss"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Sign In with Google" />
