--- a/app/src/main/res/layout/fragment_sign_in.xml
+++ b/app/src/main/res/layout/fragment_sign_in.xml
@@ -32,7 +32,7 @@
         android:text="Sign In With Email" />
 
     <Button
-        android:id="@+id/btnGoogleSignIn"
+        android:id="@+id/btnGoogleSignIns"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Sign In With Google" />
