--- a/app/src/main/res/layout/fragment_nghe_ngay.xml
+++ b/app/src/main/res/layout/fragment_nghe_ngay.xml
@@ -74,6 +74,7 @@
                     android:textSize="13dp" />
 
                 <Button
+                    android:id="@+id/btnPlayNewest"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
