--- a/app/src/main/res/menu/admin_bottom_nav_menu.xml
+++ b/app/src/main/res/menu/admin_bottom_nav_menu.xml
@@ -16,5 +16,9 @@
         android:id="@+id/action_ql_user"
         android:title="Quản lí user"
         android:icon="@drawable/baseline_people_24"/>
+    <item
+        android:id="@+id/action_admin_profile"
+        android:title="Profile"
+        android:icon="@drawable/baseline_local_library_24"/>
 
 </menu>
