--- a/app/src/main/res/layout/fragment_xem_tat_ca.xml
+++ b/app/src/main/res/layout/fragment_xem_tat_ca.xml
@@ -43,9 +43,11 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/rvListAlbum"
 
-        android:layout_margin="12dp"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="678dp"
+        android:layout_margin="12dp"
+        android:layout_marginStart="40dp"
+        android:layout_marginTop="52dp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/relativeLayout" />
 </androidx.constraintlayout.widget.ConstraintLayout>
