--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -29,6 +29,7 @@
     </LinearLayout>
 
     <TextView
+        android:id="@+id/tvUsername"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="Johan Smith"
@@ -38,6 +39,7 @@
         android:layout_gravity="center"
         android:layout_marginTop="5dp"/>
     <TextView
+        android:id="@+id/tvAddress"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="California, USA"
