--- a/app/src/main/res/layout/activity_sign_up.xml
+++ b/app/src/main/res/layout/activity_sign_up.xml
@@ -1,10 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="16dp">
 
+
+    <com.makeramen.roundedimageview.RoundedImageView
+        android:id="@+id/logoPodcast"
+        android:layout_width="251dp"
+        android:layout_height="236dp"
+        android:background="@drawable/bg_icon_circle"
+        android:backgroundTint="#FFFFFF"
+        android:padding="3dp"
+        android:src="@drawable/logo"
+        android:layout_gravity="center"
+        app:riv_corner_radius="1000dp" />
     <EditText
         android:id="@+id/etEmail"
         android:layout_width="match_parent"
@@ -34,7 +46,11 @@
         android:id="@+id/btnSignUp"
         android:layout_width="357dp"
         android:layout_height="58dp"
-        android:text="Sign Up with Email" />
+        android:text="Sign Up with Email"
+        android:textStyle="bold"
+        android:textColor="#FFFFFF"
+        android:background="@drawable/button_gradient"
+        android:layout_margin= "10dp"/>
 
     <TextView
         android:id="@+id/tvSwitchToSignIn"
@@ -42,6 +58,7 @@
         android:layout_height="35dp"
         android:text="Have an Account? Sign In"
         android:textAlignment="center"
-        android:textSize="18dp" />
+        android:textSize="20dp"
+        android:layout_margin= "10dp"/>
 
 </LinearLayout>
