--- a/app/src/main/res/layout/fragment_add_new_album.xml
+++ b/app/src/main/res/layout/fragment_add_new_album.xml
@@ -5,7 +5,7 @@
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:layout_margin="5dp"
-    tools:context=".Profile.ExistAlbumFragment">
+    >
 
     <LinearLayout
         android:layout_margin="5dp"
@@ -90,13 +90,14 @@
 
         <Button
             android:id="@+id/btnImage"
-            android:layout_width="wrap_content"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:text="Chọn hình ảnh"
-            android:textColor="#7a31d6"
+            android:textColor="#FFFFFF"
             android:textSize="18dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/admin_button_color"/>
 
         <ImageView
             android:id="@+id/imageView"
