--- a/app/src/main/res/layout/fragment_admin_add_cate.xml
+++ b/app/src/main/res/layout/fragment_admin_add_cate.xml
@@ -52,12 +52,15 @@
 
     <Button
         android:id="@+id/buttonAddCate"
-        android:layout_width="wrap_content"
+        android:layout_width="200dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="50dp"
         android:layout_marginBottom="88dp"
         android:drawableLeft="@drawable/ic_baseline_library_add_24"
-        android:text="Thêm"
+        android:text="Thêm danh mục"
+        android:textColor="#FFFFFF"
+        android:textStyle="bold"
+        android:background="@drawable/admin_button_color"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
@@ -76,11 +79,15 @@
 
     <Button
         android:id="@+id/btnCateImg"
-        android:layout_width="wrap_content"
+        android:layout_width="130dp"
         android:layout_height="wrap_content"
         android:layout_marginTop="10dp"
         android:drawableLeft="@drawable/ic_baseline_image_search_24"
         android:text="Chọn ảnh"
+        android:textStyle="bold"
+        android:background="@drawable/admin_button_color"
+        android:layout_margin= "10dp"
+        android:textColor="#FFFFFF"
         app:layout_constraintStart_toStartOf="@+id/textView14"
         app:layout_constraintTop_toBottomOf="@+id/textView14" />
 
