--- a/app/src/main/res/layout/fragment_admin_edit_album.xml
+++ b/app/src/main/res/layout/fragment_admin_edit_album.xml
@@ -90,12 +90,12 @@
 
                 <Button
                     android:id="@+id/btnImage"
-                    android:layout_width="wrap_content"
+                    android:layout_width="180dp"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="50dp"
-
+                    android:background="@drawable/admin_button_color"
                     android:text="Chọn hình ảnh"
-                    android:textColor="#7a31d6"
+                    android:textColor="#FFFFFF"
                     android:textSize="18dp"
                     android:textStyle="bold" />
 
@@ -122,14 +122,22 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Delete" />
+                    android:text="Delete"
+                    android:textColor="#FFFFFF"
+                    android:layout_margin="10dp"
+                    android:textStyle="bold"
+                    android:background="@drawable/admin_button_color"/>
 
                 <Button
                     android:id="@+id/btnUpdate"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Update" />
+                    android:text="Update"
+                    android:textColor="#FFFFFF"
+                    android:layout_margin="10dp"
+                    android:textStyle="bold"
+                    android:background="@drawable/admin_button_color"/>
             </LinearLayout>
 
 
