--- a/app/src/main/res/layout/fragment_edit_my_podcast.xml
+++ b/app/src/main/res/layout/fragment_edit_my_podcast.xml
@@ -142,7 +142,7 @@
 
             <Button
                 android:id="@+id/btnAddAudio"
-                android:layout_width="wrap_content"
+                android:layout_width="200dp"
                 android:layout_height="wrap_content"
                 android:layout_gravity="center"
                 android:layout_marginLeft="30dp"
@@ -150,7 +150,8 @@
                 android:text="Edit "
                 android:textAlignment="center"
                 android:textSize="20dp"
-                android:textStyle="bold" />
+                android:textStyle="bold"
+                android:background="@drawable/button_gradient"/>
             <LinearLayout
                 android:layout_margin="30dp"
                 android:layout_width="match_parent"
