--- a/app/src/main/res/layout/fragment_exist_album.xml
+++ b/app/src/main/res/layout/fragment_exist_album.xml
@@ -94,13 +94,15 @@
 
         <Button
             android:id="@+id/btnImage"
-            android:layout_width="wrap_content"
+            android:layout_width="180dp"
             android:layout_height="wrap_content"
             android:layout_margin="20dp"
             android:text="Chọn hình ảnh"
-            android:textColor="#7a31d6"
+            android:textColor="#FFFFFF"
             android:textSize="18dp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            android:background="@drawable/button_gradient"
+            />
 
         <ImageView
             android:id="@+id/imageView"
