--- a/app/src/main/res/layout/fragment_edit_my_podcast.xml
+++ b/app/src/main/res/layout/fragment_edit_my_podcast.xml
@@ -49,7 +49,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="30dp"
+                android:layout_margin="20dp"
                 android:text="Danh mục "
                 android:textColor="#7a31d6"
                 android:textSize="21dp"
@@ -79,8 +79,8 @@
                 android:id="@+id/spnAlbum"
                 android:layout_width="347dp"
                 android:layout_height="37dp"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
+                android:layout_marginLeft="20dp"
+                android:layout_marginRight="20dp"
                 android:textAlignment="center"
                 android:textSize="21dp"
                 android:textStyle="bold" />
@@ -88,7 +88,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="30dp"
+                android:layout_margin="20dp"
                 android:text="Tiêu đề "
                 android:textColor="#7a31d6"
                 android:textSize="21dp"
@@ -105,7 +105,7 @@
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="30dp"
+                android:layout_margin="20dp"
                 android:text="Mô tả "
                 android:textColor="#7a31d6"
                 android:textSize="21dp"
@@ -124,34 +124,26 @@
                 android:id="@+id/txtChonAudio"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_margin="30dp"
+                android:layout_margin="10dp"
                 android:text=" Audio"
                 android:textColor="#7a31d6"
                 android:textSize="21dp"
                 android:textStyle="bold" />
 
-            <TextView
-                android:id="@+id/txtNameUri"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginLeft="30dp"
-                android:layout_marginRight="30dp"
-                android:text=""
-                android:textAlignment="center"
-                android:textStyle="bold" />
-
             <Button
                 android:id="@+id/btnAddAudio"
-                android:layout_width="200dp"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:layout_gravity="center"
+
                 android:layout_marginLeft="30dp"
                 android:layout_marginRight="30dp"
-                android:text="Edit "
+                android:background="@drawable/admin_button_color"
+                android:text="Chọn audio"
                 android:textAlignment="center"
                 android:textSize="20dp"
-                android:textStyle="bold"
-                android:background="@drawable/button_gradient"/>
+               
+                android:layout_margin="10dp"/>
+
             <LinearLayout
                 android:layout_margin="30dp"
                 android:layout_width="match_parent"
@@ -160,17 +152,23 @@
 
                 <Button
                     android:id="@+id/btnDelete"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Delete" />
+                    android:text="Xóa tập"
+                    android:textStyle="bold"
+                    android:layout_marginRight="10dp"
+                    android:background="@drawable/button_gradient"
+                    />
 
                 <Button
                     android:id="@+id/btnUpdate"
-                    android:layout_width="wrap_content"
+                    android:layout_width="150dp"
                     android:layout_height="wrap_content"
                     android:layout_weight="1"
-                    android:text="Update" />
+                    android:text="Cập nhật tập"
+                    android:textStyle="bold"
+                    android:background="@drawable/button_gradient"/>
             </LinearLayout>
 
 
