--- a/app/src/main/res/layout/bottomsheet_episode.xml
+++ b/app/src/main/res/layout/bottomsheet_episode.xml
@@ -123,6 +123,7 @@
                 android:layout_width="311dp"
                 android:layout_height="25dp"
                 android:layout_marginTop="32dp"
+                android:progress="100"
                 android:thumbTint="@color/super_light_gray"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
